--- a/faq.html
+++ b/faq.html
@@ -56,8 +56,8 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">03</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">How does installation without GPS antenna affect the system?</h2>
-						  <center><p>We strongly recommend to use GPS antenna, however it is possible to work without it ,but it's may cause the problem of cell phone registration to the network in terms of surrounding GSM networks, cell phone model, temperature. Once the phone has registered to network, GPS does not affect productivity of the system at all.</p></center>
+						  <h2 class="faq">How does installation without a GPS antenna affect the system?</h2>
+						  <center><p>We strongly recommend using a GPS antenna; however, it is possible to work without it, but it may cause problems with cell phone registration to the network in terms of surrounding GSM networks, cell phone model, temperature. Once the phone has registered to a network, GPS does not affect the productivity of the system at all.</p></center>
 
 
 						</div>
@@ -66,7 +66,7 @@
 						 <h5 style="text-align: center;" class="font_5">04</h5>
 						  <div class="s2"></div>
 						  <h2 class="faq">How does the system handle handover between MultiBTS systems?</h2>
-						  <center><p>BSC on a separate server. We use intra BSC handover. How to set up, described at <a href="https://fairwaves.co/docs/how_to's.html">How to</a></p></center>
+						  <center><p>BSC is on a separate server. We use intra BSC handover. Setup is described at <a href="https://fairwaves.co/docs/how_to's.html">How to</a></p></center>
 
 
 						</div>
@@ -96,10 +96,10 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">07</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">Do you have specific simcards or usual simcards can be used?
+						  <h2 class="faq">Do you have specific SIM-cards or can any SIM-cards be used?
 
 </h2>
-						  <center><p>Fairwaves base station could be configured to work with any SIM-cards. However it is impossible to provide subscriber authentication and traffic encryption if you do not know Ki secret key of your SIM-cards. If you operate a normal mobile network with encryption and subscriber authentication,you can set up only open network either get SIM-cards with known Ki keys to set up close network. You can buy SIM-cards and program them.</p></center>
+						  <center><p>Fairwaves base station could be configured to work with any SIM-cards. However, it is impossible to provide subscriber authentication and traffic encryption if you do not know Ki secret key of your SIM-cards. If you operate a normal mobile network with encryption and subscriber authentication, you can only set up an open network and either get SIM-cards with known Ki keys or set up a closed network. </p></center>
 
 
 
@@ -111,7 +111,7 @@
 						  <h2 class="faq">What is the capacity of the subscriber database?
 
 </h2>
-						  <center><p>A base station with one transceiver is able to handle from 200 subscribers (if you offer your subscribers a flat tariff with free local calls) to 500 (normal mode with tariffs still comfortable for subscribers). For example, with 10 000 subscribers you will need around 20 base stations. Please note this is very rough estimation.</p></center>
+						  <center><p>A base station with one transceiver is able to handle from 200 (if you offer your subscribers a flat tariff with free local calls) to 500 subscribers (normal mode with tariffs still comfortable for subscribers). For example, with 10,000 subscribers, you will need around 20 base stations. Please note this is a very rough estimation.</p></center>
 
 
 
@@ -123,7 +123,7 @@
 						  <h2 class="faq">Will the UMTRX work with UMTS?
 
 </h2>
-						  <center><p>UmTRX will be able to work with UMTS, but we don't have a software implementation for that.
+						  <center><p>UmTRX will work with UMTS, but we don't have a software implementation for that.
 </p></center>
 
 
@@ -136,7 +136,7 @@
 						  <h2 class="faq">How do you handle SMS and GPRS in your systems?
 
 </h2>
-						  <center><p> Fairwaves base stations are able to provide basic services: Voice and SMS also Fairwaves provide GPRS, in terms of quality it disabled in production systems to get more capacity for the voice and SMS either that is too slow to use it as data service. We are considering to use WiFi instead of GPRS.
+						  <center><p> Fairwaves base stations are able to provide basic services: Voice and SMS. Also, Fairwaves provide GPRS; in terms of quality it is disabled in production systems to get more capacity for the voice and SMS that is too slow to use it as data service. We are considering using WiFi instead of GPRS. 
 </center></p>
 
                         </div>
@@ -187,7 +187,7 @@
 						  <h2 class="faq"> How do subscribers pay their bills in terms of village service?
 
 </h2>
-						  <center><p>1. express card payment 2. physically bring money to the person who have an access for the enroll payments.</p></center>
+						  <center><p>1. Express card payment; 2. Physically bring money to the person who has access to the enroll payments.</p></center>
 
 
 
@@ -196,10 +196,10 @@
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">15</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq"> How is subscriber provisioning process goes, SIM Cards or Phone?
+						  <h2 class="faq"> How does the subscriber provisioning process go, with SIM-cards or Phone?
 
 </h2>
-						  <center><p>Sim card. You can program your own sim cards and this would be a closed network either you can use existed sim, then network would be open.
+						  <center><p>SIM card. You can program your own SIM-cards and this would be a closed network. You can also use an existing SIM-card, then the network would be open.
 </p></center>
 
 
@@ -226,7 +226,7 @@
 						  <h2 class="faq"> Is it possible to connect external BTS to the network through A-bis interface?
 
 </h2>
-						  <center><p>We do not support external BTS connection through A-bis interface, because this architecture is not fault-tolerant from the connection lost. It does not have local calls switching, there is no simple way of backhaul optimization, that brings extra expenses for the village connection through the VSAT.</p></center>
+						  <center><p>We do not support external BTS connection through A-bis interface, because this architecture is not fault-tolerant from the connection lost. It does not have local call switching, and there is no simple way of backhaul optimization, which brings extra expenses for the village connection through the VSAT.</p></center>
 
 
 
@@ -307,7 +307,7 @@ We can help you do a non-standard configuration on demand and run a commercial n
                         <div class="grid_4">
 						 <h5 style="text-align: center;" class="font_5">22</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">  Will all calls be charged (inside/outside) ?
+						  <h2 class="faq">  Will all calls be charged (inside/outside)?
 
 </h2>
 						  <center><p> It depends on whether you want to bill local calls or not.</center></p>
@@ -321,10 +321,10 @@ We can help you do a non-standard configuration on demand and run a commercial n
                         <div class="grid_4">
 				 	     <h5 style="text-align: center;" class="font_5">23</h5>
 						  <div class="s2"></div>
-						  <h2 class="faq">  Wouldn't it get a network congestion cause, providing free internal calls?
+						  <h2 class="faq">  Wouldn't providing free internal calls cause network congestion?
 
 </h2>
-						  <center><p> We're developing advanced options to avoid full network congestion in UmCORE server which will be available as part of the commercial agreement.</center></p>
+						  <center><p> We're developing advanced options to avoid full network congestion in the UmCORE server, which will be available as part of the commercial agreement.</center></p>
 
 
 						</div>
