--- a/umdesk.html
+++ b/umdesk.html
@@ -346,7 +346,7 @@ img {
 <br>
 <h4><a name="1.UmDESK"></a>1. UmDESK<a class="anchorlink" href="#1.UmDESK"></a></h4>
 <p><img src="http://s019.radikal.ru/i608/1409/60/3a29878257fd.png" /></p>
-<p>The UmDESK is an IP-backhaul GSM Network In The Box shaped in mini-ITX case which has ability to work separately as BTS and BSC. As NITB it includes BSC, MSC, HLR, VLR and SMSC core network components.</p>
+<p>The UmDESK is an IP-backhaul GSM Network In The Box shaped in mini-ITX case which has the ability to work separately as BTS and BSC. As NITB, it includes BSC, MSC, HLR, VLR, and SMSC core network components.</p>
 <h4><a name="1.1Mechanical specification"></a>1.1 Mechanical specification<a class="anchorlink" href="#1.1Mechanical specification"></a></h4>
 <br><br>
 <h4>Enclosure</h4>
@@ -451,20 +451,20 @@ img {
 <li>&#8226 NITB (Fully autonomous GSM PBX with VoIP gateway (SIP interface))</li>
 </ul>
 <p><img src="http://i068.radikal.ru/1409/01/5150385cd640.png" /></p>
-<p>The difference between those variants is only in the installed and configured software packages on the Linux based OS.  
+<p>The difference between those variants is only in the installed and configured software packages on the Linux-based OS.  
 </p>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
 <p>Base station comes with already installed and configured software</p>
 <h4><a name="2.1 Getting started"></a>2.1 Getting started<a class="anchorlink" href="#2.1	Getting started"></a></h4>
 <ol>
 <li>
-<p>&#8226 Connect to power source, attach GSM antennas, monitor and turn it on.</p>
+<p>&#8226 Connect to a power source, attach GSM antennas, monitor and turn it on.</p>
 </li>
 <li>
-<p>&#8226 Check the LEDs on the front panel (Tx1 Rx1 Tx2 Rx2) if it lights, UmDESK works properly.</p>
+<p>&#8226 Check the LEDs on the front panel (TX1 RX1 TX2 RX2). If it lights up, UmDESK works properly.</p>
 </li>
 <li>
-<p>&#8226 Make sure that Ethernet cable connected.</p>
+<p>&#8226 Make sure that the Ethernet cable is connected.</p>
 </li>
 </ol>
 <h4><a name="2.2 Test call"></a>2.2 Test call<a class="anchorlink" href="#2.2 Test call"></a></h4>
@@ -499,7 +499,7 @@ img {
 </li>
 </ul>
 <h4><a name="2.3 Log in"></a>2.3 Log in<a class="anchorlink" href="#2.3	Log in"></a></h4>
-<p>In order to configure and administer the UmDESK, you have to attach monitor, keyboard, mouse or login into device remotely over SSH. External Interface configured to obtain IP address via DHCP and also has a static <u>192.168.50.100</u></p>
+<p>In order to configure and administer the UmDESK, you have to attach monitor or log in into device remotely over SSH. There are two physical ethernet interfaces.  External interface IP is 192.168.50.100 also it's configured to obtain IP address via DHCP. 192.168.10.10 is internal interface for the UmTRX.</p>
 
 
 <p><strong>NOTE:</strong> Small inch monitors might have a displaying problem with console mode resolution. </p>
@@ -526,7 +526,7 @@ img {
 <li>Password: fairwaves</li>
 </ol>
 <p>Once you have logged into the system, you will be at a Linux shell command prompt. </p>
-<p>You may use a deferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY">www.putty.org</a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
+<p>You may use a deferent client software for remote access, we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY">www.putty.org</a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
 <h4><a name="2.4 IP and network configuration (optional)"></a>2.4 IP and network configuration (optional)<a class="anchorlink" href="#2.4 IP and network configuration (optional)"></a></h4>
 
 <p>If you would like to set another static address for the device, edit </p>
