--- a/umsite.html
+++ b/umsite.html
@@ -347,7 +347,7 @@ img {
 <br>
 <h4><a name="1.UmSITE"></a>1. UmSITE<a class="anchorlink" href="#1.UmSITE"></a></h4>
 <p><img src="http://i074.radikal.ru/1501/99/211623961215.jpg" /></p>
-<p>The UmSITE is an IP-backhaul GSM BTS, BSC and Network In The Box.  This is tower-mounted, fault-tolerant and completely protected from any weather conditions solution, which is used for wide range network.</p>
+<p>The UmSITE is an IP-backhaul GSM BTS, BSC and Network In The Box.  This is solution that is tower-mounted, fault-tolerant, and completely protected from any weather conditions, which is used for wide range network.</p>
 <h4><a name="1.1Mechanical specification"></a>1.1 Mechanical specification<a class="anchorlink" href="#1.1Mechanical specification"></a></h4>
 <br>
 <h4>Enclosure</h4>
@@ -400,7 +400,7 @@ img {
 </li>
 </ul>
 <h4>Power supply</h4>
-<p>Fairwaves does not provide the power supply. This is because, different places use different power sources. Fairwaves products compatible with any power sources including solar panels as well.	 </p>
+<p>Fairwaves does not provide the power supply. This is because, different places use different power sources. Fairwaves products are compatible with any power sources, including solar panels, as well. </p>
 <h4>Antenna</h4>
 <p>Faiwaves does not provide GSM antennas. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band with N-male connectors</p>
 <h4><a name="1.2 Software specification"></a>1.2 Software specification<a class="anchorlink" href="#1.2 Software specification"></a></h4>
@@ -438,41 +438,41 @@ img {
 <li>&#8226 Clocking: OCXO / GPS disciplined</li>
 </ul>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
-<p>Base station comes with already installed and configured software, just attach GPS and GSM antennas, power supply.</p>
+<p>Base station comes with already installed and configured software; just attach the GPS and GSM antennas and power supply.</p>
 
 <p><strong>NOTE:</strong> Base station comes with already installed and configured software, just attach GPS antenna, GSM antennas and power supply.</p>
 
 <p>Steps:</p>
 
-<li>Place the UmSite on the mast directly connectors down</li>
-<li> Attach GSM antennas. We recommend having at least 10 ft (3m) between them</li>
-<li> Attach GPS antenna. Good antenna visibility to the sky is required</li>
-<li> Turn on Base station</li>
-<p><strong>NOTE:</strong> GSM antennas are not included in a standard package. We do not recomend to operate base station without antennas</p>
+<li>Place the UmSite on the mast directly, with connectors down. </li>
+<li> Attach GSM antennas. We recommend having at least 10 feet (3m) between them.</li>
+<li> Attach GPS antenna. Good antenna visibility to the sky is required.</li>
+<li> Turn on Base station.</li>
+<p><strong>NOTE:</strong> GSM antennas are not included in a standard package. We do not recommend to operating the base station without antennas.</p>
 <h4><a name="2.1 Antennas installation"></a>2.1 Antennas installation<a class="anchorlink" href="#2.1	Antennas installation"></a></h4>
-<p>Each of both antennas complement each other. The second antenna must have the same position as the first antenna on a mast as well as the same direction and incline angle to the ground. </p>
-<p>For the GPS antenna, there are no strict requirements only good antenna visibility to the sky</p>
+<p>Each of the antennas complement each other. The second antenna must have the same position as the first antenna on a mast, as well as the same direction and incline angle to the ground.  </p>
+<p>For the GPS antenna, there are no strict requirements, only good antenna visibility to the sky</p>
 <p><img src="http://s019.radikal.ru/i618/1507/f7/780db1eb7edf.png" /></p>
 <hr />
-<p>For the mast at least of 100 ft (30m) in height, antennas can be mounted upright within the 10 ft (3m) distance between each other.</p>
+<p>For the mast at least of 100 feet (30m) in height, antennas can be mounted upright within the 10 foot (3m) distance between each other.</p>
 <p><img src="http://s50.radikal.ru/i130/1507/7a/eb8b60961081.png" /></p>
 <p><strong>NOTE:</strong> Every cell is configured with a <a href="https://en.wikipedia.org/wiki/Broadcast_control_channel">BCCH</a> carrier. 
 Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p>
-<p>Therefore TRX1 antenna  has to be situated below TRx2 antenna e.g. If the connection would be established when the TRx1 antenna is higher and then has assigned to a timeslot of the lower antenna TRX2, call connection could be lost.</p>
+<p>Therefore, TRX1 antenna  has to be situated below the TRX2 antenna. For example, if the connection would be established when the TRX1 antenna is higher and then it has been assigned to a timeslot of the lower antenna TRX2, call connection could be lost. </p>
 <p><em>The antenna attached to the TRX1 should not have an advantage by height in that particular case.</em></p>
 
 <h4><a name="2.2 Getting started"></a>2.2 Getting started<a class="anchorlink" href="#2.2	Getting started"></a></h4>
 <ol>
 <li>
-<p>&#8226 Connect to power source and turn it on. LED on the front pannel will flashing in 1-2 minutes later turned on.</p>
+<p>&#8226 Connect to the power source and turn it on. LED on the front panel will begin flashing in one to two minutes after being turned on.</p>
 </li>
 <li>
-<p>&#8226 Make sure that Ethernet cable connected.</p>
+<p>&#8226 Make sure that the Ethernet cable is connected.</p>
 </li>
 </ol>
-<p><strong>NOTE:</strong> We strongly recommend does not put UmSITE on a public network. Connect it to your local network where is access to Internet through NAT or Firewall. Keep <u>UDP port 1195</u> open on your server for fairwaves VPN in case technical support</p>
+<p><strong>NOTE:</strong> We strongly recommend not putting UmSITE on a public network. Connect it to your local network where there is access to the Internet through NAT or Firewall. Keep UDP port 1195 open on your server for Fairwaves VPN in case  of technical support</p>
 <p><img src="http://s019.radikal.ru/i633/1505/04/7e1b573f0b89.png" /></p>
-<p>Take any GSM phone with any SIM card and try to search the network. Network might have a different names such as <u>Fairwaves, 1011, Test, etc.</u></p>
+<p>Take any GSM phone with any SIM card and try to search the network. The network might have a different name, such as <u>Fairwaves, 1011, Test, etc.</u></p>
 <h4><a name="2.3 Test call"></a>2.3 Test call<a class="anchorlink" href="#2.3 Test call"></a></h4>
 <h4>Searching for the Network</h4>
 <ol>
@@ -519,8 +519,7 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <li>Login: fairwaves</li>
 <li>Password: fairwaves</li>
 </ol>
-<p>Once you logged in, you will get access to Linux terminal. </p>
-<p>You may use a deferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY"><strong>www.putty.org</strong></a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
+<p>You may use a defferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY"><strong>www.putty.org</strong></a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
 <h4>Login over Serial cable (Only for UmSITE)</h4>
 <p>Serial connection allows you to choose boot options and log into the system if network connection is not available.</p>
 <p>You'll get options like:</p>
@@ -532,9 +531,9 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <p><img src="http://s017.radikal.ru/i422/1505/62/53fa6e8aaad9.jpg" /></p>
 <p>For the Windows user <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
 <p><img src="http://s017.radikal.ru/i413/1503/ad/0b02ea2dc90f.png" /></p>
-<p>Number of the COM port available at <u>Desktop manager</u> when you are connecting to the laptop. </p>
+<p>Number of the COM port available at the<u>Desktop manager</u> when you are connecting to the laptop. </p>
 <p>For the Linux user <strong><a href="http://www.cyberciti.biz/tips/connect-soekris-single-board-computer-using-minicom.html">minicom</a></strong></p>
-<p>Run this command to connect via serial cabel:</p>
+
 <pre><code>shell&gt; minicom -D/dev/ttyUSB0 -b38400 -o
 </code></pre>
 
@@ -546,10 +545,10 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <p>Refer to <a href="https://help.ubuntu.com/14.04/ubuntu-help/index.html"><strong>Ubuntu</strong></a> documentation for details
 </p>
 
-<p><strong>NOTE:</strong> Base station configured to get IP address through DHCP.
-We also recommend to keep configuration for the
-<u>eth1:1</u> (192.168.50.50/24), because it's used as a backup IP address. If you
-want to configure a statis IP address, change <u>eth1</u> configuration.</p>
+<p><strong>NOTE:</strong> The base station is configured to get an IP address through DHCP. 
+We also recommend to keeping the configuration for the 
+<u>eth1:1</u> (192.168.50.50/24) because it's used as a backup IP address. If you
+want to configure a static IP address, change <u>eth1</u> configuration.</p>
 
 </body>
 </html>
