--- a/umsite.html
+++ b/umsite.html
@@ -33,6 +33,7 @@
           <ul class="nav nav-list">
 		<h4><a href="#1.UmSITE">1. UmSITE</a></h4>
 		<a href="#1.1Mechanical specification">1.1 Mechanical specification</a>
+		<a href="#Power supply"> - Power supply</a>
 		<a href="#1.2 Software specification">1.2 Software specification</a>
 		<a href="#1.3 Hardware options"> 1.3 Hardware options</a>
 		<h4><a href="#2 Installation">2. Installation</a></h4>
@@ -399,8 +400,15 @@ img {
 <li>&#8226 RJ45 Ethernet (100/1000Mbit)
 </li>
 </ul>
-<h4>Power supply</h4>
+<h4><a name="Power supply"></a>Power supply<a class="anchorlink" href="#Power supply"></a></h4>
+
 <p>Fairwaves does not provide the power supply. This is because, different places use different power sources. Fairwaves products are compatible with any power sources, including solar panels, as well. </p>
+<h4>List of the power supplies:</h4>
+<p>UmSITE-TM10 (100W) ( IP65: <a href="http://www.onlinecomponents.com/mean-well-hlg100h30a.html?p=42885969">Mean Well HLG-100H-30A</a></p>
+<p>UmSITE-TM3 (60~80W) IP65:  <a href="http://www.onlinecomponents.com/mean-well-hlg60h15a.html?p=43545144">Mean Well HLG-60H-15A</a></p>
+<p>Indoor power supply: Any basic <a href="http://www.amazon.com/Universal-Laptop-Notebook-Power-Adapter/dp/B00406ITIA/ref=sr_1_11?ie=UTF8&amp;qid=1429815258&amp;sr=8-11&amp;keywords=laptop+charger">laptop charger</a> can be used</p>
+<h4>Power/COM-port wires connection schema</h4>
+<p><img src="http://s018.radikal.ru/i527/1508/9a/b63174d67c20.png" /></p>
 <h4>Antenna</h4>
 <p>Faiwaves does not provide GSM antennas. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band with N-male connectors</p>
 <h4><a name="1.2 Software specification"></a>1.2 Software specification<a class="anchorlink" href="#1.2 Software specification"></a></h4>
