--- a/how_to's.html
+++ b/how_to's.html
@@ -435,7 +435,7 @@ $ sudo add-apt-repository ppa:guruofquality/pothos
 
 <strong>Building form source </strong>
 
-<p>For UHD build and installation details see the <a href="http://code.ettus.com/redmine/ettus/projects/uhd/wiki/UHD_Build">UHD Wiki</a>.</p>
+<p>For UHD build and installation details see the <a href="http://files.ettus.com/manual/page_build_guide.html">UHD Wiki</a>.</p>
 <h4>UmTRX module</h4>
 <p>Once UHD has been installed the <strong>UmTRX module</strong> must be built and installed.</p>
 <p>Go to <em>master</em> branch of the UHD-Fairwaves repository,</p>
