osmo-trx rebuild correction

--- a/how_to's.html
+++ b/how_to's.html
@@ -458,8 +458,8 @@ $ sudo make install
 <p>go to:</p>
 <p><em>/fairwaves-tools/deps/osmo-trx</em></p>
 <p>and run</p>
-<pre><code>./autoreconf -fi
-configure
+<pre><code>autoreconf -fi
+./configure
 make -j4
 sudo make install
 </code></pre>
