--- a/how_to's.html
+++ b/how_to's.html
@@ -1,8 +1,21 @@
-<html class="global desktop"><head><meta name="viewport" content="user-scalable=yes,width=device-width,initial-scale=1"><style type="text/css">html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}body{-webkit-text-size-adjust:none}</style><style type="text/css">*,*:before,*:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}</style><meta name="viewport" content="initial-scale=1">
+<!DOCTYPE html>
+<html class="global desktop">
+<head>
+<meta name="viewport" content="user-scalable=yes,width=device-width,initial-scale=1"><style type="text/css">html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}body{-webkit-text-size-adjust:none}</style><style type="text/css">*,*:before,*:after{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}</style><meta name="viewport" content="initial-scale=1">
 
 <link rel="stylesheet" type="text/css" href="global.css">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-69984948-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <title>Fairwaves</title>
-	</head>
+
 <body class="homepage">
 	<div class="wrapper">
 	
@@ -347,7 +360,11 @@ img {
     <td>Branch</td>
   </tr>
   <tr>
-    <td><a href="ht://githtpsomub.c/fairwaves/UHD-Fairwaves.git">UHD-Fairwaves</a></td>
+    <td><a href="https://github.com/EttusResearch/uhd">UHD</a></td>
+    <td>maint</td>
+  </tr>
+  <tr>
+    <td><a href="https://github.com/fairwaves/UHD-Fairwaves">UHD-Fairwaves</a></td>
     <td>master</td>
   </tr>
   <tr>
@@ -356,15 +373,19 @@ img {
   </tr>
   <tr>
     <td><a href="http://git.osmocom.org/libosmocore">libosmocore</a></td>
-    <td> fairwaves/master</td>
+    <td>master</td>
   </tr>
   <tr>
     <td><a href="http://git.osmocom.org/libosmo-abis">libosmo-abis</a></td>
-    <td>fairwaves/master</td>
+    <td>master</td>
   </tr>
   <tr>
-    <td><a href="http://git.osmocom.org/openbsc">openBSC</a></td>
-    <td>fairwaves/master</td>
+    <td><a href="http://git.osmocom.org/libosmo-sccp">libosmo-sccp</a></td>
+    <td>master</td>
+  </tr>
+  <tr>
+    <td><a href="http://git.osmocom.org/libosmo-netif">libosmo-netif</a></td>
+    <td>master</td>
   </tr>
   <tr>
     <td><a href="http://git.osmocom.org/openbsc">openBSC</a></td>
@@ -372,7 +393,7 @@ img {
   </tr>
   <tr>
     <td><a href="http://git.osmocom.org/osmo-bts">osmoBTS</a></td>
-    <td>fairwaves/master</td>
+    <td>fairwaves/master (./configure --enable-trx)</td>
   </tr>
 </table>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
