Page proof of the last commit

--- a/how_to's.html
+++ b/how_to's.html
@@ -354,7 +354,7 @@ img {
 <h4></h4>
 
 
-<table style="width: 400px; height: 100px; float: left">
+<table style="width: 600px; height: 100px; float: left">
   <tr>
     <td>Source</td>
     <td>Branch</td>
@@ -393,10 +393,10 @@ img {
   </tr>
   <tr>
     <td><a href="http://git.osmocom.org/osmo-bts">osmoBTS</a></td>
-    <td>fairwaves/master (./configure --enable-trx)</td>
+    <td>fairwaves/master (run <strong>./configure --enable-trx</strong> at the installation process )</td>
   </tr>
 </table>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
  <a name="2. UmTRX firmware"></a><h4>2. UmTRX firmware<a class="anchorlink" href="#2. UmTRX firmware"></a></h4>
 <p>If you are presently using an older UmTRX-specific fork of the main UHD codebase (UHD version 003.004) and would like to be up and running with the new driver (for UHD version 003.008 and later), you must first upgrade the firmware on your UmTRX.  </p>
 <p>in this order:</p>
