--- a/how_to's.html
+++ b/how_to's.html
@@ -393,7 +393,7 @@ img {
   </tr>
   <tr>
     <td><a href="http://git.osmocom.org/osmo-bts">osmoBTS</a></td>
-    <td>fairwaves/master (run <strong>./configure --enable-trx</strong> at the installation process )</td>
+    <td>fairwaves/master <br>(run <strong>./configure --enable-trx</strong> at the installation process )</td>
   </tr>
 </table>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
