html ver of procedure updated

--- a/markdown/umtrx.html
+++ b/markdown/umtrx.html
@@ -494,6 +494,14 @@ phys_chan_config TCH/F
 <pre><code>./usrp_burn_mb_eeprom --key &lt;key&gt; --val &lt;val&gt;
 </code></pre>
 
+<p>Serial number:</p>
+<pre><code>/usr/lib/uhd/utils/usrp_burn_mb_eeprom --args arg=&quot;192.168.10.2&quot; --values serial=&quot;xxxxxxx&quot;
+</code></pre>
+
+<p>tcxo-dac:</p>
+<pre><code>/usr/lib/uhd/utils/usrp_burn_mb_eeprom --value tcxo-dac=&quot;1910&quot;
+</code></pre>
+
 <p><strong>Note:</strong> all values should be stored in decimal format</p>
 <h3>8. GPS testing</h3>
 <ol>
