--- a/umdesk.html
+++ b/umdesk.html
@@ -41,17 +41,27 @@
 	
       <div class="span3">
           <ul class="nav nav-list">
-		<h4><a href="#1.UmDESK">1. UmDESK</a></h4>
-		<a href="#1.1Mechanical specification">1.1 Mechanical specification</a>
-		<a href="#1.2 Software specification">1.2 Software specification</a>
-		<a href="#1.3 Hardware options"> 1.3 Hardware options</a>
-		<a href="#1.4 Software options"> 1.4 Software options</a>
-		<h4><a href="#2 Installation">2. Installation</a></h4>
-		<a href="#2.1 Getting started">2.1 Getting started</a>
-        <a href="#2.2 Test call">2.2 Test call</a></li>
-		<a href="#2.3 Log in">2.3 Log in</a></li>
-		<a href="#2.4 IP and network configuration (optional)">2.4 IP and network configuration (optional)</a></li>
-		</ul>
+		
+     
+     <ul  class="drop_vert_menu_um">
+	<li><a href="#1.UmDESK"><span>1. UmDESK</span></a>
+		<ul>
+     <li><a href="#1.1Mechanical specification"><span>1.1 Mechanical specification</span></a></li>
+     <li><a href="#1.2 Software specification"><span>1.2 Software specification</span></a></li>
+     <li><a href="#1.3 Hardware options"><span>1.3 Hardware options</span></a></li>
+     <li><a href="#1.4 Software options"><span>1.4 Software options</span></a></li>
+   
+       </ul>
+     </li>
+	<li><a href="#2 Installation"><span>2. Installation</span></a>
+	    <ul>
+     <li><a href="#2.1 Getting started"><span>2.1 Getting started</span></a></li>
+     <li><a href="#2.2 Test call"><span>2.2 Test call</span></a></li>
+     <li><a href="#2.3 Log in"><span>2.3 Log in</span></a></li>
+     <li><a href="#2.4 IP and network configuration (optional)"><span>2.4 IP and network configuration (optional)</span></a></li>   
+        </ul>
+    </ul>
+	</li>
       </div>
       <div class="span9 main">
    
@@ -539,9 +549,11 @@ img {
 <p>You may use a deferent client software for remote access, we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY">www.putty.org</a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
 <h4><a name="2.4 IP and network configuration (optional)"></a>2.4 IP and network configuration (optional)<a class="anchorlink" href="#2.4 IP and network configuration (optional)"></a></h4>
 
-<p>If you would like to set another static address for the device, edit </p>
-<p><em>/etc/network/</em>interfaces  file:</p>
-<pre><code>Shell&gt; sudo nano /etc/network/interfaces
+<p>eth0 - <u>192.168.10.10</u> This is internal interface linked to the UmTRX. <strong>Do not edit this</strong></p>
+<p>eth1 - Configured to obtain IP address through DHCP. In case of recovery, it also has a static IP <u>192.168.50.100</u></p>
+
+<p>Edit eth1 in <u>/etc/network/interfaces.d/</u> In order to change network configuration</p>
+<pre><code>Shell&gt; sudo nano /etc/network/interfaces.d/eth1
 </code></pre>
 
 <p>Refer to Ubuntu documentation <a href="www.help.ubuntu.com/14.04/serverguide/network-configuration.html">UBUNTU</a> for details
