--- a/umsite.html
+++ b/umsite.html
@@ -41,18 +41,27 @@
 	
       <div class="span3">
           <ul class="nav nav-list">
-		<h4><a href="#1.UmSITE">1. UmSITE</a></h4>
-		<a href="#1.1Mechanical specification">1.1 Mechanical specification</a>
-		<a href="#Power supply"> - Power supply</a>
-		<a href="#1.2 Software specification">1.2 Software specification</a>
-		<a href="#1.3 Hardware options"> 1.3 Hardware options</a>
-		<h4><a href="#2 Installation">2. Installation</a></h4>
-		<a href="#2.1 Antennas installation">2.1 Antennas installation</a>
-		<a href="#2.2 Getting started">2.2 Getting started</a>
-        <a href="#2.3 Test call">2.3 Test call</a>
-		<a href="#2.4 Log in">2.4 Log in</a></li>
-		<a href="#2.5 IP and network configuration (optional)">2.5 IP and network configuration (optional)</a></li>
-		</ul>
+     <ul  class="drop_vert_menu_um">
+	<li><a href="#1.UmSITE"><span>1. UmSITE</span></a>
+		<ul>
+     <li><a href="#1.1Mechanical specification"><span>1.1 Mechanical specification</span></a></li>
+     <li><a href="#Power supply"><span>Power supply</span></a></li>
+     <li><a href="#1.2 Software specification"><span>1.2 Software specification</span></a></li>
+     <li><a href="#1.3 Hardware options"><span>1.3 Hardware options</span></a></li>
+   
+       </ul>
+     </li>
+	<li><a href="#2 Installation"><span>2. Installation</span></a>
+	    <ul>
+     <li><a href="#2.1 Antennas installation"><span>2.1 Antennas installation</span></a></li>
+     <li><a href="#2.2 Getting started"><span>2.2 Getting started</span></a></li>
+     <li><a href="#2.3 Test call"><span>2.3 Test call</span></a></li>
+     <li><a href="#2.4 Log in"><span>2.4 Log in</span></a></li>
+     <li><a href="#2.5 IP and network configuration (optional)"><span>2.5 IP and network configuration (optional)</span></a></li>   
+        </ul>
+    </ul>
+	</li>
+     
       </div>
       <div class="span9 main">
    
@@ -358,7 +367,7 @@ img {
 <br>
 <h4><a name="1.UmSITE"></a>1. UmSITE<a class="anchorlink" href="#1.UmSITE"></a></h4>
 <p><img src="http://i074.radikal.ru/1501/99/211623961215.jpg" /></p>
-<p>The UmSITE is an IP-backhaul GSM BTS, BSC and Network In The Box.  This is solution that is tower-mounted, fault-tolerant, and completely protected from any weather conditions, which is used for wide range network.</p>
+<p>The UmSITE is an IP-backhaul GSM Base Station, seamlessly integrating functionality that is usually provided by GSM components such as BSC, MSC, VLR, HLR and SMSC. Its software-centric design enables unprecedented flexibility, supporting remote configuration, maintenance and upgrade, and covering everything from transmit power control to end user features.</p>
 <h4><a name="1.1Mechanical specification"></a>1.1 Mechanical specification<a class="anchorlink" href="#1.1Mechanical specification"></a></h4>
 <br>
 <h4>Enclosure</h4>
@@ -412,7 +421,7 @@ img {
 </ul>
 <h4><a name="Power supply"></a>Power supply<a class="anchorlink" href="#Power supply"></a></h4>
 
-<p>Fairwaves does not provide the power supply. This is because, different places use different power sources. Fairwaves products are compatible with any power sources, including solar panels, as well. </p>
+<p>Fairwaves does not provide the power supply by reason of various places use different power sources. Fairwaves products are compatible with any power sources, including solar panels, as well. </p>
 <h4>List of the power supplies:</h4>
 <p>UmSITE-TM10 (100W) ( IP65: <a href="http://www.onlinecomponents.com/mean-well-hlg100h30a.html?p=42885969">Mean Well HLG-100H-30A</a></p>
 <p>UmSITE-TM3 (60~80W) IP65:  <a href="http://www.onlinecomponents.com/mean-well-hlg60h15a.html?p=43545144">Mean Well HLG-60H-15A</a></p>
@@ -420,7 +429,7 @@ img {
 <h4>Power/COM-port wires connection schema</h4>
 <p><img src="http://s018.radikal.ru/i527/1508/9a/b63174d67c20.png" /></p>
 <h4>Antenna</h4>
-<p>Faiwaves does not provide GSM antennas. You can use any other antenna suitable for 850/900/1800/1900 GSM frequency band with N-male connectors</p>
+<p>Fairwaves does not provide GSM antennas. You can use any other antennas suitable for 850/900/1800/1900 GSM frequency band with N-male connectors</p>
 <h4><a name="1.2 Software specification"></a>1.2 Software specification<a class="anchorlink" href="#1.2 Software specification"></a></h4>
 <br>
 <h4>Number of Transceivers</h4>
@@ -456,7 +465,7 @@ img {
 <li>&#8226 Clocking: OCXO / GPS disciplined</li>
 </ul>
 <h4><a name="2 Installation"></a>2. Installation<a class="anchorlink" href="#2 Installation"></a></h4>
-<p>Base station comes with already installed and configured software; just attach the GPS and GSM antennas and power supply.</p>
+
 
 <p><strong>NOTE:</strong> Base station comes with already installed and configured software, just attach GPS antenna, GSM antennas and power supply.</p>
 
@@ -525,9 +534,9 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <h4><a name="2.4 Log in"></a>2.4 Log in<a class="anchorlink" href="#2.4	Log in"></a></h4>
 
 
-<p>In order to configure <strong>UmSITE</strong>, you have to login into device remotely over SSH. Interface configured to obtain IP address via DHCP and also has a static <u>192.168.50.100</u></p>
-<p>Connect laptop to the UmDESK/UmSITE via Ethernet cable.</p>
-<p><strong>NOTE:</strong> Make sure your interface in the same subnet as the UmSITE/UmDESK and has IP like <u>192.168.50.101</u>
+<p>In order to configure <strong>UmSITE</strong>, you have to login into device remotely over SSH. The Interface configured to obtain IP address via DHCP and also has a static <u>192.168.50.100</u></p>
+<p>Connect laptop to the UmSITE via Ethernet cable.</p>
+<p><strong>NOTE:</strong> Make sure your interface in the same subnet as the UmSITE and has IP like <u>192.168.50.101</u>
 </p>
 <ol>
 <li>1. Run PuTTY
@@ -537,7 +546,7 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <li>Login: fairwaves</li>
 <li>Password: fairwaves</li>
 </ol>
-<p>You may use a defferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download at <a href="www.putty.org" title="PuTTY"><strong>www.putty.org</strong></a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
+<p>You may use a defferent client software for remote access, but we recommend <strong>PuTTY</strong> (you can download it at <a href="www.putty.org" title="PuTTY"><strong>www.putty.org</strong></a> ).  PuTTY is an open source SSH and telnet client, for the Windows platform. </p>
 <h4>Login over Serial cable (Only for UmSITE)</h4>
 <p>Serial connection allows you to choose boot options and log into the system if network connection is not available.</p>
 <p>You'll get options like:</p>
@@ -545,19 +554,22 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <li>1. Advanced options for Ubuntu</li>
 <li>2. Test RAM memory</li>
 </ol>
-<p>First of all you have to use <a href="http://www.ebay.com/sch/i.html?_from=R40&_trksid=p2050601.m570.l1311.R1.TR11.TRC1.A0.H2.Xusb+serial+a.TRS0&_nkw=usb+serial+adapter&_sacat=0">USB Serial Adapter</a> for the connection (which is not included in a standard UmSITE package).</p>
+<p>First of all, you have to use <a href="http://www.ebay.com/sch/i.html?_from=R40&_trksid=p2050601.m570.l1311.R1.TR11.TRC1.A0.H2.Xusb+serial+a.TRS0&_nkw=usb+serial+adapter&_sacat=0">USB Serial Adapter</a> for the connection (which is not included in a standard UmSITE package).</p>
 <p><img src="http://s017.radikal.ru/i422/1505/62/53fa6e8aaad9.jpg" /></p>
 <p>For the Windows user <a href="www.putty.org" title="PuTTY"><strong>putty</strong></a> </p>
 <p><img src="http://s017.radikal.ru/i413/1503/ad/0b02ea2dc90f.png" /></p>
-<p>Number of the COM port available at the<u>Desktop manager</u> when you are connecting to the laptop. </p>
+<p>You can find a number of the COM port at the <u>Desktop manager</u>. </p>
 <p>For the Linux user <strong><a href="http://www.cyberciti.biz/tips/connect-soekris-single-board-computer-using-minicom.html">minicom</a></strong></p>
 
 <pre><code>shell&gt; minicom -D/dev/ttyUSB0 -b38400 -o
 </code></pre>
 
 <h4><a name="2.5 IP and network configuration (optional)"></a>2.5 IP and network configuration (optional)<a class="anchorlink" href="#2.5 IP and network configuration (optional)"></a></h4>
-<p>If you would like to set another static address for the device, edit  <u>/etc/network/interfaces</u></p>
-<pre><code>Shell&gt; sudo nano /etc/network/interfaces
+<p>eth0 - <u>192.168.10.10</u> This is internal interface linked to the UmTRX. <strong>Do not edit this</strong></p>
+<p>eth1 - Configured to obtain IP address through DHCP. In case of recovery, it also has a static IP <u>192.168.50.100</u></p>
+
+<p>Edit eth1 in <u>/etc/network/interfaces.d/</u> In order to change network configuration</p>
+<pre><code>Shell&gt; sudo nano /etc/network/interfaces.d/eth1
 </code></pre>
 
 <p>Refer to <a href="https://help.ubuntu.com/14.04/ubuntu-help/index.html"><strong>Ubuntu</strong></a> documentation for details
@@ -565,7 +577,7 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 
 <p><strong>NOTE:</strong> The base station is configured to get an IP address through DHCP. 
 We also recommend to keeping the configuration for the 
-<u>eth1:1</u> (192.168.50.50/24) because it's used as a backup IP address. If you
+<u>eth1:1</u> (192.168.50.50/24) because it's used to as a backup IP address. If you
 want to configure a static IP address, change <u>eth1</u> configuration.</p>
 
 </body>
