--- a/umdesk.html
+++ b/umdesk.html
@@ -58,7 +58,7 @@
      <li><a href="#2.1 Getting started"><span>2.1 Getting started</span></a></li>
      <li><a href="#2.2 Test call"><span>2.2 Test call</span></a></li>
      <li><a href="#2.3 Log in"><span>2.3 Log in</span></a></li>
-     <li><a href="#2.4 IP and network configuration (optional)"><span>2.4 IP and network configuration (optional)</span></a></li>   
+     <li><a href="#2.4 IP and network configuration (optional)"><span>2.4 Network configuration</span></a></li>   
         </ul>
     </ul>
 	</li>
