--- a/umsite.html
+++ b/umsite.html
@@ -57,7 +57,7 @@
      <li><a href="#2.2 Getting started"><span>2.2 Getting started</span></a></li>
      <li><a href="#2.3 Test call"><span>2.3 Test call</span></a></li>
      <li><a href="#2.4 Log in"><span>2.4 Log in</span></a></li>
-     <li><a href="#2.5 IP and network configuration (optional)"><span>2.5 IP and network configuration (optional)</span></a></li>   
+     <li><a href="#2.5 IP and network configuration (optional)"><span>2.5 Network configuration</span></a></li>   
         </ul>
     </ul>
 	</li>
@@ -564,7 +564,7 @@ Generally, the TRX ID of BCCH is fixed to be the smallest TRX ID in the cell.</p
 <pre><code>shell&gt; minicom -D/dev/ttyUSB0 -b38400 -o
 </code></pre>
 
-<h4><a name="2.5 IP and network configuration (optional)"></a>2.5 IP and network configuration (optional)<a class="anchorlink" href="#2.5 IP and network configuration (optional)"></a></h4>
+<h4><a name="2.5 IP and network configuration (optional)"></a>2.5 IP and network configuration<a class="anchorlink" href="#2.5 IP and network configuration (optional)"></a></h4>
 <p>eth0 - <u>192.168.10.10</u> This is internal interface linked to the UmTRX. <strong>Do not edit this</strong></p>
 <p>eth1 - Configured to obtain IP address through DHCP. In case of recovery, it also has a static IP <u>192.168.50.100</u></p>
 
