fixed non-UTF-8 minus sign

--- a/openbts-umts.html
+++ b/openbts-umts.html
@@ -326,7 +326,7 @@ img {
 </head>
 <body>
 
-<p>This document will provide an insight on how to run OpenBTS-UMTS with UmTRX. The installation was tested on Ubuntu 14.04 and assumes that user already has installed UHD and UmTRX module. The details of the UHD and UmTRX installation may be found there: <a href="http://umtrx.org/hardware/driver/">http://umtrx.org/hardware/driver/</a>. Please be advised, that unlike GSM, you can't have open registration and thus you can't just use any random SIM card – you need a programmable SIM-card.</p>
+<p>This document will provide an insight on how to run OpenBTS-UMTS with UmTRX. The installation was tested on Ubuntu 14.04 and assumes that user already has installed UHD and UmTRX module. The details of the UHD and UmTRX installation may be found there: <a href="http://umtrx.org/hardware/driver/">http://umtrx.org/hardware/driver/</a>. Please be advised, that unlike GSM, you can't have open registration and thus you can't just use any random SIM card - you need a programmable SIM-card.</p>
 <p>You may find the full version of the article with UMTS explanation in our blog: <a href="https://fairwaves.co/blog/openbts-umts-3g-umtrx/">https://fairwaves.co/blog/openbts-umts-3g-umtrx/</a></p>
 <br>
 <h4><a name="1. Dependencies"></a>1. Dependencies Installation<a class="anchorlink" href="#1. Dependencies"></a></h4>
@@ -363,8 +363,8 @@ $ sudo make install</code></pre>
 <ul>
 <li>&#8226 'GGSN.DNS' set to '8.8.8.8' to enable Google DNS.</li>
 <li>&#8226 'GGSN.Firewall.Enable' set to '0' to disable Firewall.</li>
-<li>&#8226 'UMTS.Radio.Band' – set the band you are going to use. Select from 850, 900, 1700, 1800, 1900 or 2100.</li>
-<li>&#8226 'UMTS.Radio.C0' – set the UARFCN. Range of valid values depend upon the selected operating band. Please, ensure that you are using free operating band.</li>
+<li>&#8226 'UMTS.Radio.Band' - set the band you are going to use. Select from 850, 900, 1700, 1800, 1900 or 2100.</li>
+<li>&#8226 'UMTS.Radio.C0' - set the UARFCN. Range of valid values depend upon the selected operating band. Please, ensure that you are using free operating band.</li>
 </ul>
 <p>To create folders and working database:</p>
 <pre><code>$ sudo mkdir /var/log/OpenBTS-UMTS
